# ml-scratch

./: .gitignore  README.md
sklearn_minilm/: Makefile  README.md  minilm.py  pyproject.toml
sklearn_to_onnx/: Makefile  README.md  main.py  pyproject.toml
